# AInbox

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DELIVERY.md  IMPLEMENTATION.md  INDEX.md  PLAN.md  QUICKSTART.md  README.md  setup.py
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: ainbox-channel-configure.md  mailbox-read.md  mailbox-send.md  mailbox-sync.md
.copilot/skills/: mailbox-basics.md  mailbox-communication.md  mailbox-inbox-processing.md
.github/: dependabot.yml  release-please-config.json  release.yml
.github/plugin/: marketplace.json  plugin.json
.github/workflows/: native-release.yml  validate.yml
agents/: orchestrator.agent.md  project-manager.agent.md
ainbox/: __init__.py  ballot.py  cli.py  global_init.py  mailbox.py  message.py  util.py
channel/: README.md  package.json  server.ts  tsconfig.json
channel/lib/: config.ts  frontmatter.ts  mailbox-cli.ts  state.ts  watcher.ts
channel/scripts/: configure.ts
channel/tests/: cli.test.ts  frontmatter.test.ts  sanitize.test.ts  server.test.ts  watcher.test.ts
hooks/: ensure-mailbox-hook.sh  hooks.json
scripts/: ensure-mailbox.ps1  ensure-mailbox.sh  install.ps1  install.sh  mailbox.ps1  mailbox.sh  release_prepare.py  run-headless-mailbox-e2e.ps1  run-motion-gate-demo.ps1
skills/mailbox-basics/: SKILL.md
src/: ballot.rs  global_init.rs  mailbox.rs  main.rs  message.rs  util.rs
tests/: native_cli.rs  test_ballot.py  test_channel_parity.py  test_mailbox_e2e.py  test_plugin_manifests.py  test_release_prepare.py  test_version_metadata.py
(+15 files in other folders)
