[package]
name = "ainbox"
version = "0.1.7"
edition = "2021"
description = "Filesystem-based async mailbox for coding agents"
license = "MIT"
repository = "https://github.com/JerrettDavis/AInbox"

[[bin]]
name = "mailbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.20.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
uuid = { version = "1.18.1", features = ["v4"] }
